<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ivory"
    android:padding="25dp">


    <TextView
        android:id="@+id/game_name"
        android:layout_width="375dp"
        android:layout_height="91dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#5F4343"
        android:textSize="38sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/player1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/player_1"
                android:textAlignment="center"
                android:textColor="#383838"
                android:textColorHint="#838383"
                android:textDirection="locale"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/player1_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-1dp"
                android:text="@string/_0"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/player2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/player_2"
                android:textAlignment="center"
                android:textColor="#383838"
                android:textColorHint="#838383"
                android:textDirection="locale"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/player2_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-1dp"
                android:text="@string/_0"
                android:textColor="#000000"

                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:columnCount="3"
        android:rowCount="3">


        <Button
            android:id="@+id/button1"
            style="@style/TicTacToeButton"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button2"
            style="@style/TicTacToeButton"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button3"
            style="@style/TicTacToeButton"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button4"
            style="@style/TicTacToeButton"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button5"
            style="@style/TicTacToeButton"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button6"
            style="@style/TicTacToeButton"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button7"
            style="@style/TicTacToeButton"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button8"
            style="@style/TicTacToeButton"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button9"
            style="@style/TicTacToeButton"
            android:textSize="60sp" />
    </GridLayout>


    <Button
        android:id="@+id/reset_button"
        style="@style/reset_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reset_board"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/save_button"
        style="@style/some_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/save_results"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</LinearLayout>
